# MCSMatching

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: data_graph  streaming
example/query/: Q1
reformat/: reformat.h  yeast.h
src/: main.cpp
src/analysis/: analysis.cpp  analysis.h
src/graph/: graph.cpp  graph.h  mgraph.cpp  mgraph.h  streaming.cpp  streaming.h
src/include/: config.h
src/include/thirdpart/googletest/include/gtest/: gtest.h
src/include/thirdpart/googletest/include/gtest/internal/: gtest-internal.h  gtest-param-util.h
src/include/thirdpart/googletest/src/: gtest-internal-inl.h  gtest.cc
src/include/thirdpart/googletest/test/: gtest-param-test_test.cc  gtest_help_test.py  gtest_unittest.cc
src/matching-algo/: matching.cpp
src/matching-algo/motif/: motif.cpp  motif.h  motif_matching.cpp  motif_matching.h
src/matching-algo/multi-query/: grpahflow.cpp
src/matching-algo/single-query/: DFS.cpp  turboxflux.cpp
src/matching/single-query/: turboxflux.h
src/subgraphmatching/: matching.cpp  matching.h
src/subgraphmatching/multi-query/: grpahflow.h
src/subgraphmatching/single-query/: DFS.h  symbi.cpp  symbi.h
src/util/: memory.h  timer.cpp  timer.h  type.h  utils.h
src/util/generator/: generator.cpp  generator.h
src/util/shuffle/: shuffle.h  yeast.h
